Tue Feb 18 16:29:34 2003  Tim Janik  <timj@gtk.org>

	* bsecontainer.c:
	(bse_container_do_remove_item): decrement n_items _after_ uncrossing
	to keep n_items checks in uncrossing logic working.
	(_bse_container_cross_unlink): give precedence to recursively unlinked
	cross references over further existing cross links.
	(_bse_container_uncross_descendant):
	(_bse_container_uncross): reload BseContainerCrossLinks* which might
	have been reallocated during callbacks.

	* bsetrack.c:
	(track_uncross_part): stop after the first part to uncross was found.

Tue Feb 18 01:09:06 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsepcmdevice-csl.c: use BSE_PCM_DEVICE_CSL_SUPPORT (which is in the
	BSE namespace) instead of HAVE_LIBCSL

Mon Feb 17 22:52:02 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am: libcsl support

	* bsepcmdevice-csl.[hc]: new PCM device implementation for
	libcsl (Common Sound Layer). This for instance allows using
	beast with aRts.

	* bsepcmdevice-oss.c: bugfix: close filedescriptor when >= 0,
	not when < 0.

Mon Feb 17 18:34:46 2003  Tim Janik  <timj@gtk.org>

	* bseplugin.c (bse_plugin_register_exports): register choice<=>enum
	transform functions for dynamic enum types.

	* bsestorage.[hc]: keep internal hash table of objects and their unames
	created during parsing. resolve uname paths via internal hash table if
	possible to give storage scope objects precedence over existing objects.
	removed BSE_OBJECT_FLAG_FIXED_UNAME hackery.

Mon Feb 17 15:31:41 2003  Tim Janik  <timj@gtk.org>

	* bseobject.c:  use global ID allocator.

	* bsesnet.[hc]: nuke per-object id allocator, use global ID allocator.

	* bseutils.[hc]: removed old functions. updated bse_string_hash().
	added global ID allocator.

Fri Feb 14 07:50:29 2003  Tim Janik  <timj@gtk.org>

	* bsestorage.[hc]: major overhaul. made BseStorage an object.
	moved GObject property storage and parsing logic to here.
	provide highlevel storage and parsing primitives and keep the